# bsp_factory

./: .env.example  .gitignore  BSP Agent WorkFlow.drawio  CONTEXT.md  README.md  docker-compose.yml  kb_client.py  langgraph.json  pyproject.toml  rag_config.py  rag_integration.py  spec.md  test_rag.py  test_rag_eval.py
MIC-741_KnowledgeBase/: README.md
MIC-741_KnowledgeBase/01_Issues/: ISSUE-G42005_GPU-nvpmodel.md  ISSUE-G42006_LAN-MGBE.md  RE-01_mdio-fix.md  RE-02_apply-mic741-117gb-flash-config.md  RE-03_remove-ea-graphic-driver.md  RE-04_enable-canbus-jp71.md  RE-05_skip-board-info-check.md  RE-06_spi-canbus-frequency.md  RE-07_camera-sipl-genericize.md  RE-08_revert-mttcan-mgbe3-shutdown.md  RE-09_boot-storage-nvme-switch.md  RE-10_fix-som-filename.md  RE-11_fix-mgbe1-rst-gpio-conflict.md  RE-12_bringup-jp72-base.md  RE-13_internal-bsp-download-url.md  RE-14_customize-at7a1-jp72.md  RE-15_enable-pcie-c3-2nd-nvme.md  RE-16_fix-pinmux-i2c-can-rsvd.md  RE-17_camera-sipl-r3920.md  RE-18_select-som-t5000-t4000.md  RE-19_fix-can-mcp2518fd-interrupt.md  RE-INDEX.md
MIC-741_KnowledgeBase/02_Original_Code/: README.md
MIC-741_KnowledgeBase/03_Git_History/: mic_741_jetpack_7.2_history.md
MIC-741_KnowledgeBase/etl/: convert_pdf.py  convert_pinmux.py  run_all.py
RAG_DOCS/: manifest.yaml
agent/: __init__.py  config.py  graph.py  main.py  observability.py  run_lock.py  server.py  state.py  studio_graph.py  webhook.py
agent/nodes/: workflow.py
agent/prompts/: code_review_policy.md
agent/tools/: __init__.py  artifact_tools.py  bsp_build.py  deep_patch_agent.py  doc_knowledge.py  edit_agent_tools.py  edit_tools.py  git_tools.py  github_tools.py  gitlab_tools.py  knowledge_tool.py  llm_tools.py  mic741_knowledge.py  patch_agent.py  patch_tools.py  path_tools.py  planner_agent.py  react_evidence.py  readonly_tools.py  repo_tools.py  reranker.py  retry_tools.py  review_tools.py  skill_tools.py  test_tools.py  web_tools.py
db/: ingestion.py  neo4j_client.py  postgres.py
docs/: BSP Agent WorkFlow.drawio  frontend-design.md  observability.md  pipeline-diagram.md  pipeline.d2  pipeline.md  system-overview.md
docs/adr/: 0001-direct-working-tree-for-mvp.md  0002-agent-push-after-approval.md  0003-github-webhook-trigger.md  0004-managed-git-workflow.md  0006-bounded-react-evidence-node.md  0007-approval-rest-api.md  0008-publish-retry-and-recovery.md  0009-human-directed-retry.md  0010-search-replace-edit-format.md  0011-agentic-patch-agent.md  0012-llm-failure-degradation.md  0013-mic741-knowledge-db-rag.md  0014-mic741-llm-reranker.md  0015-hunk-aware-knowledge-injection.md  0016-deep-agent-patch-stage.md  0017-deep-agent-core-skill-as-tool.md  0018-bsp-build-environment-and-entrypoint-contract.md  0019-target-build-gate.md  0020-tiered-planner-executor-deep-agents.md  0021-knowledge-document-ingestion.md  0022-document-retrieval-and-cross-encoder-reranking.md  0023-reranker-as-local-http-service.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: api.ts  main.tsx  styles.css
rag/: bm25.py  cache.py  config.py  embedding.py  hybrid.py  indexer.py  loader.py  models.py  rag_graph.py  rag_state.py  reranker.py  retriever.py  vector_store.py
rag/nodes/: gap_report.py  grader.py  guard.py  hybrid_retrieve.py  input_planner.py  llm.py  output.py  rewrite.py  web_fallback.py
scripts/: build_bsp.sh  init-camera-smoke.sh  test_full_pipeline.py  test_rag.py  test_rag_integration.py  test_rag_timing.py  verify.sh
skills/: known_error_patterns.yaml
skills/jetson-customize-camera/: skill-card.md  skill.oms.sig
tests/: conftest.py  test_api.py  test_artifact_tools.py  test_deep_patch_agent.py  test_doc_ingest.py  test_doc_knowledge.py  test_edit_agent_tools.py  test_edit_tools.py  test_git_tools.py  test_knowledge_tool.py  test_llm_failure_degradation.py  test_llm_json_parsing.py  test_llm_tools.py  test_mic741_knowledge.py  test_observability.py  test_patch_agent.py  test_patch_tools.py  test_path_tools.py  test_planner_agent.py  test_react_evidence.py  test_readonly_tools.py  test_retry_tools.py  test_review_tools.py  test_skill_tools.py  test_target_build.py  test_web_tools.py  test_webhook.py  test_workflow_smoke.py
tests/validation/: boot_check.sh  (+1 more)
(+217 files in other folders)
