[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jetson-bsp-agent"
version = "0.1.0"
description = "Controlled Jetson BSP repair and validation workflow agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "gitpython>=3.1.0",
  "httpx>=0.27.0",
  "langchain>=1.0.0",
  "langchain-openai>=1.0.0",
  "langfuse>=3.0.0",
  "langgraph>=1.0.0",
  "langgraph-checkpoint-sqlite>=3.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.29.0",
  "deepagents>=0.6.12,<0.7",
  # RAG CRAG pipeline (enabled via RAG_CRAG_ENABLED=true)
  "qdrant-client>=1.9.0",
  "sentence-transformers>=3.0.0",
  "rank-bm25>=0.2.2",
  "neo4j>=5.0.0",
  # ONNX Runtime for fast CPU inference (replaces slow PyTorch CPU embedding)
  "onnxruntime>=1.18.0",
  "optimum[onnxruntime]>=1.18.0",
]

[project.optional-dependencies]
dev = [
  "langgraph-cli[inmem]>=0.4.30",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.scripts]
bsp-agent = "agent.main:app"

[tool.setuptools.packages.find]
include = ["agent*", "rag*", "db*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
